[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Ty Myrddin <info@tymyrddin.space>"]
readme = "README.md"
packages = [{include = "fastapi_tdd_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.34.0"
fastapi = "~0.78.0"
asyncpg = "~0.25.0"
tortoise-orm = "0.18.1"
aerich = "0.6.2"
gunicorn= "~20.1.0"
newspaper3k = "^0.2.8"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
coverage = "^6.4"
pytest-cov = "^3.0.0"
requests = "^2.26.0"
isort = "~5.10.1"
pytest-xdist = "~2.5.0"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
